added xml response format
